--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,11 @@
 <body>
 <div id="app">
   <div class="first-loading-wrp">
-    <h1>Cloud</h1>
+    <h1>Boot</h1>
     <div class="loading-wrp">
       <span class="dot dot-spin"><i></i><i></i><i></i><i></i></span>
     </div>
-    <div style="display: flex; justify-content: center; align-items: center;">Tumo Cloud</div>
+    <div style="display: flex; justify-content: center; align-items: center;">Tumo Team</div>
   </div>
 </div>
 </body>
